feat: removido paymentForm e inserido seed
